<resources>
    <string name="app_name">VoluSchool</string>
    <string name="login">LOGIN</string>
    <string name="hello">Hello</string>
    <string name="string_fill_data_login">Please fill in the following data to enter</string>
    <string name="string_uname_login">Username</string>
    <string name="string_email_login">Email</string>
    <string name="string_passwd_login">Password</string>
    <string name="string_dont_have">Don\'t have an account yet</string>
    <string name="register">Register</string>
    <string name="hint_register">Fill in the following data</string>
    <string name="string_name_register">Nama</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_add">New</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cost_donation">Cost Donation</string>
    <string name="donation_name">Donation Name</string>
    <string name="date_donation">Date Donation</string>
    <string name="image_school">Image School</string>
    <string name="sd_mburing">SD Mburing</string>
    <string name="donate">DONATE</string>
    <string name="saldo">Saldo</string>
    <string name="history_message">History Message</string>
    <string name="inbox_message">Message Inbox</string>
    <string name="value_cost_saldo">Rp 1000000</string>
    <string name="no_hp">No Hp</string>
    <string name="example_nohp">081217915595</string>
    <string name="no_ktp">No KTP</string>
    <string name="string_invite_volu">Yuk jadi volunteer !</string>
    <string name="invite_donate">Bantu siapa hari ini ?</string>
    <string name="no_rekening">No Rekening</string>
    <string name="example_norek">9094256</string>
    <string name="keluar">Keluar</string>
    <string name="example_ktp">1371016902570005</string>
    <string name="image_detail_school">Image Detail School</string>
    <string name="school_name">School Name</string>
    <string name="example_cost">Rp. 2000.0000</string>
    <string name="tv_terkumpul">Terkumpul dari Rp.</string>
    <string name="tv_story_detail">Sekolah ini letaknya berada di pelosok desa. Mungkin perlu 1 jam untuk akses ke tempat nya yang berjarak kurang lebih 10 km. Sekolah ini secara fisik sudah lama dan sebaiknya ada renovasi agar lebih layak dan memadai</string>
    <string name="cerita">Cerita</string>
    <string name="company_name">Company Name</string>
    <string name="donatur">Donatur</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="nominal_donasi">Nominal Donasi</string>
    <string name="donasi_sekarang">Donasi Sekarang</string>
    <string name="gabung_sekarang">Gabung Sekarang</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="upload_cv">Upload CV</string>
    <string name="terkumpul">Terkumpul </string>
    <string name="tv_value_rp">Rp. </string>
    <string name="tab_text_1">Donation</string>
    <string name="tab_text_2">Volunteer</string>
    <string name="upload">Upload</string>
    <string name="buat_donasi">Buat Donasi</string>
    <string name="cari_volunteer">Cari Volunteer</string>
    <string name="fasilitas_yang_dibutuhkan">Fasilitas yang dibutuhkan</string>
    <string name="donatur_name">Donatur Name</string>
    <string name="detail_pembayaran">Detail Pembayaran</string>
    <string name="sembunyikan_nama">Sembunyikan Nama</string>
    <string name="sembunyikan">Sembunyikan</string>
    <string name="upload_berhasil">Upload Berhasil</string>
    <string name="voluschool">Voluschool</string>
    <string name="masuk">MASUK</string>
    <string name="halo">Halo</string>
    <string name="silahkan_isi_data_berikut">Silahkan isi data berikut</string>
    <string name="daftar">Daftar</string>
    <string name="password">Password</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="upload_ktp">Upload KTP</string>
    <string name="image_promotion">Image Promotion</string>
    <string name="nama_sekolah">Nama Sekolah</string>
    <string name="deskripsi_sekolah">Deskripsi Sekolah</string>
    <string name="target_dana">Target Dana</string>
    <string name="lokasi_sekolah">Lokasi Sekolah</string>
    <string name="kriteria_volunteer">Kriteria Volunteer</string>
    <string name="jumlah_volunteer">Jumlah Volunteer</string>
    <string name="loading">Loading...</string>
    <string name="target_total">Target total</string>
    <string name="submit_donasi">Donasi</string>
    <string name="message_alert">Apa kamu sudah yakin?</string>
    <string name="alert_confirm_positive">Ya</string>
    <string name="result_donasi">Terima kasih telah berdonasi</string>
    <string name="alert_confirm_negative">Tidak</string>
    <string name="nama">Nama</string>
    <string name="alif_andarta_al_falah">Alif Andarta Al Falah</string>
    <string name="tv_story_volunteer">Tenaga kerja guru di sekolah ini sangatlah minim. Hal tersebut dikarenakan kurang akses untuk menuju tempat tersebut sangat sulit</string>
    <string name="example_detvol_lokasi">Lokasi sekolah ini terdapat di Jl Niwen Sidorahayu Wagir Kabupaten Malang</string>
    <string name="example_detvol_kriteria">Kami membutuhkan volunteer yang mau mengabdi selama 5 hari tiap minggunya. Dari jam 7 pagi hingga jam 12 siang. Kami sangat menghargai volunteer yang pandai berbahasa Inggris</string>
    <string name="kriteria">Kriteria yang dibutuhkan</string>
    <string name="target_jumlah_orang">Target jumlah orang </string>
    <string name="volunteer">Volunteer</string>
    <string name="result_joinvol">Terima kasih telah bergabung</string>
    <string name="detail_sekolah">Detail Sekolah</string>
    <string name="tutup">Tutup</string>
    <string name="example_detail_app">Voluschool adalah platform untuk membantu pendidikan yang ada di Indonesia melalui pemberian donasi dan juga volunteer tenaga pendidik.</string>
    <string name="string_fitur1">Memberikan donasi berupa uang</string>
    <string name="string_fit2">Mendaftar sebagai volunteer guru</string>
    <string name="string_fit3">Open donasi untuk sekolah yang kekurangan fasilitas</string>
    <string name="string_fit4">Open volunteer untuk sekolah yang kekurangan guru</string>
    <string name="field_cannot_blank">Semua data wajib diisi!</string>
    <string name="string_penuh">Donasi sudah penuh</string>
    <string name="string_volu_penuh">Volunteer telah penuh</string>
    <string name="shared_preference">Shared Preference</string>

    <string-array name="bank_arrays">
        <item>BCA</item>
        <item>BNI</item>
        <item>Mandiri</item>
        <item>BRI</item>
    </string-array>
</resources>
