<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/img_bcc_filkom"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_profil_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/string_profile"
            android:text="@string/nama"
            android:layout_marginTop="32dp"
            android:layout_below="@id/profile_image"/>

        <View
            android:id="@+id/line_0"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/tv_profil_nama"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/tv_value_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/alif_andarta_al_falah"
            style="@style/string_profile"
            android:gravity="right"
            android:layout_below="@id/profile_image"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_profil_hp"/>

        <TextView
            android:id="@+id/tv_profil_hp"
            style="@style/string_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/no_hp"
            android:layout_below="@id/line_0"/>

        <View
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/tv_value_no_hp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/tv_value_no_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/example_nohp"
            style="@style/string_profile"
            android:gravity="right"
            android:layout_below="@id/line_0"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_profil_hp"/>

        <TextView
            android:id="@+id/tv_no_ktp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_ktp"
            style="@style/string_profile"
            android:layout_below="@id/line_1"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_value_no_ktp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:gravity="right"
            android:text="@string/example_ktp"
            style="@style/string_profile"
            android:layout_below="@id/line_1"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_profil_hp"
            />

        <View
            android:id="@+id/line_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/tv_value_no_ktp"
            android:background="#c0c0c0"/>

        <Button
            android:id="@+id/btn_logout"
            android:background="@drawable/bg_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/keluar"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="#FFFF"
            android:layout_below="@id/tv_no_ktp"/>



    </RelativeLayout>

    <!-- TODO: Update blank fragment layout -->

</FrameLayout>