<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.FormDonasiActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap"
        android:textColor="@color/primaryOrange"
        android:fontFamily="@font/montserrat"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pekerjaan"
        android:layout_marginTop="8dp"
        android:textColor="@color/primaryOrange"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengalaman"
        android:layout_marginTop="8dp"
        android:textColor="@color/primaryOrange"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:lines="3"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_style"
        android:textSize="16sp"
        android:textColor="#FFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/upload_cv"/>

    <Button
        android:id="@+id/btn_submit_volunteer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gabung_sekarang"
        android:background="@drawable/bg_btn_style"
        android:textColor="#FFFF"
        android:fontFamily="@font/montserrat"
        android:textSize="16sp"
        android:layout_marginTop="200dp"/>


</LinearLayout>